tirando o acento de ideia

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <p class="heading-5 quote-classic-cite">Sarah Delallinde</p>
                 <p class="quote-classic-position">Estudante</p>
                 <div class="quote-classic-text">
-                  <q>Acredito que a idéia de convocar usuários e expor a proposta através das mídias sociais possa ser interessante. Com uma divulgação maior, a página vai ganhar mais números e credibilidade. </q>
+                  <q>Acredito que a ideia de convocar usuários e expor a proposta através das mídias sociais possa ser interessante. Com uma divulgação maior, a página vai ganhar mais números e credibilidade. </q>
                 </div>
               </div>
             </blockquote>
