--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Sobre</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Metodologia</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Metodologiaaa</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatos</a>
                     </li>
