--- a/action.html
+++ b/action.html
@@ -1,63 +1,74 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="pt-br">
-<head>
-  <title>Política de Privacidade</title>
-  <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css"
-    href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="preloader">
-    <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark"
-          src="images/pourpose.png" alt="" width="245" height="50" /></a>
-    </div>
-    <div class="preloader-body">
-      <div class="cssload-container">
-        <div class="cssload-speeding-wheel"></div>
+  <head>
+    <title>Ação</title>
+    <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <div class="preloader">
+      <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="images/pourpose.png" alt="" width="245" height="50"/></a>
+      </div>
+      <div class="preloader-body">
+        <div class="cssload-container">
+          <div class="cssload-speeding-wheel"></div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="page">
-    <header class="section page-header page-header-1">
-      <div class="rd-navbar-wrap">
-        <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
-          <div class="rd-navbar-main-outer">
-            <div class="rd-navbar-main">
-              <div class="rd-navbar-panel">
-                <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-                <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark"
-                      src="images/png-judafy-logo.png" alt="" width="245" height="50" /></a>
+    <div class="page">
+      <header class="section page-header page-header-1">
+        <div class="rd-navbar-wrap">
+          <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
+            <div class="rd-navbar-main-outer">
+              <div class="rd-navbar-main">
+                <div class="rd-navbar-panel">
+                  <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
+                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/png-judafy-logo.png" alt="" width="245" height="50"/></a>
+                  </div>
+                </div>
+                <div class="rd-navbar-nav-wrap">
+                  <ul class="rd-navbar-nav">
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Sobre</a>
+                    </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Metodologia</a>
+                    </li>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="action.html">Ação</a>
+                    </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatos</a>
+                    </li>
+                  </ul>
                 </div>
               </div>
-              <div class="rd-navbar-nav-wrap">
-                <ul class="rd-navbar-nav">
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="rd-nav-item active"><a class="rd-nav-link" href="about.html">Sobre</a>
-                  </li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Metodologia</a>
-                  </li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="action.html">Ação</a>
-                  </li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatos</a>
-                  </li>
-                </ul>
-              </div>
             </div>
+          </nav>
+        </div>
+      </header>
+      <div class="breadcrumbs-custom">
+        <div class="container breadcrumbs-custom-container">
+          <div class="breadcrumbs-custom-inner context-dark">
+            <div class="breadcrumbs-custom-item">
+              <h6>Sobre o projeto</h6>
+              <h1 class="breadcrumbs-custom-title">Como devemos agir?</h1>
+            </div>
+            <ul class="breadcrumbs-custom-path">
+              <li><a href="index.html">Home</a></li>
+              <li class="active">Ação</li>
+            </ul>
           </div>
-        </nav>
+        </div>
       </div>
-    </header>
-    <h1 style="text-align: center;">AQUI ALGUÉM FARÁ A POLÍTICA DE PRIVACIDADE</h2>
+        
       <footer class="section footer-classic bg-gray-950">
         <div class="footer-classic-main">
-          <div class="container">
+          <div class="container"> 
             <div class="row row-30">
               <div class="col-lg-3">
                 <div class="row row-30 row-xl-40">
@@ -123,8 +134,7 @@
                 <div class="row row-50 row-xl-70">
                   <div class="col-12">
                     <h3>Sobre nós</h3>
-                    <p>Desde 2023 somos um grupo de estudantes da E.E.S.R.R que quer pavimentar a história. Com nosso
-                      talento e força de vontade, Judafy trará a revolução do setor agrícola brasileiro.</p>
+                    <p>Desde 2023 somos um grupo de estudantes da E.E.S.R.R que quer pavimentar a história. Com nosso talento e força de vontade, Judafy trará a revolução do setor agrícola brasileiro.</p>
                   </div>
                   <div class="col-12">
                     <h3>Notícias</h3>
