--- a/termsofuse.html
+++ b/termsofuse.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="wide wow-animation" lang="en">
+<html class="wide wow-animation" lang="pt-br">
   <head>
     <title>Termos de Uso</title>
     <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="preloader">
-      <div class="preloader-logo"><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/pourpose.png" alt="" width="245" height="50"/><img class="brand-logo-light" src="images/logo-inverse-245x50.png" alt="" width="245" height="50"/></a>
+      <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="images/pourpose.png" alt="" width="245" height="50"/></a>
       </div>
       <div class="preloader-body">
         <div class="cssload-container">
@@ -36,9 +36,11 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Sobre</a>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="about.html">Sobre</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Metodologia</a>
+                    </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="action.html">Ação</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatos</a>
                     </li>
@@ -58,6 +60,8 @@
                     </li>
                     <li>
                       <h2>Imagens utilizadas</h2>
+                        <p>Imagem de <a href="https://br.freepik.com/fotos-gratis/foto-aerea-de-um-belo-campo-verde-agricola-perto-de-mon
+                        tanhas_13006465.htm#fromView=search&page=1&position=0&uuid=ef1ee7bd-058f-428f-966a-498f88f6b427">Freepik</a></p>
                         <p>Imagem de <a href="https://br.freepik.com/fotos-gratis/vista-lateral-de-pesquisador
                         -do-sexo-masculino-no-laboratorio-de-biotecnologia-com-planta_11375004.htm#page=3&query=biotecnologia%20agricola&
                         position=47&from_view=keyword&track=ais_user&uuid=0aec574e-87c8-4985-bba3-36f42c3a8f17">Freepik</a></p>
@@ -103,6 +107,7 @@
                         Ana Clara Ferreira do Santos<br>
                         Ana Cecília<br>
                         Anny de O. Gonçalves<br>
+                        Daniela Sales<br>
                         Ellen Louise Lopes Pessoa<br>
                         Emilly Lopes de Paulo<br>
                         Everton Medeiros Marques<br>
@@ -111,15 +116,21 @@
                         Geovana Braga Pereira<br>
                         Giovana Vitória Oliveira<br>
                         Guilherme Pereira do Amaral<br>
+                        Iara Gomes<br>
+                        Júlia Ferreira<br>
                         Jamily Victória Barros<br>
                         Lavynnia Gabrielle S. Diniz<br>
+                        Laura Soares<br>
                         Lucas Marinho Blon Rocha<br>
-                        Marcos Lacerda Magno<br>
                         Mariana Luiza<br>
+                        Marcos Lacerda Magno<br>
+                        Maria Luiza Alves<br>
                         Mateus Batista Macieira<br>
+                        Ny de O. Gonçalves<br>
                         Pedro Henrique Nogueira Ferreira<br>
                         Sara Arnoni<br>
                         Thomaz Augusto Araújo Silva<br>
+                        Vitória Marques<br>
                       </p>
                     </li>
                   </ul>
@@ -199,33 +210,33 @@
                       </div>
                       <div class="col-12">
                         <h3>Notícias</h3>
-                        <p>Insira seu e-mail para receber as notícias e atualizações sobre o nosso projeto.</p>
-                        <!-- RD Mailform-->
-                        <form class="rd-form rd-mailform form-inline subscribe-form" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
-                          <div class="form-wrap">
-                            <input class="form-input" id="subscribe-form-2-email" type="email" name="email" data-constraints="@Email @Required">
-                            <label class="form-label" for="subscribe-form-2-email">E-mail</label>
-                          </div>
-                          <div class="form-button">
-                            <button class="button button-primary-gradient button-icon-only" type="submit" aria-label="subscribe"><span class="icon icon-md mdi mdi-email-outline"></span></button>
-                          </div>
-                        </form>
+                    <p>Insira seu e-mail para receber as notícias e atualizações sobre o nosso projeto.</p>
+                    <form class="rd-form rd-mailform form-inline" data-form-output="form-output-global" id="newsletterForm">
+                      <div class="form-wrap">
+                        <label class="form-label" for="newsletter">E-mail</label>
+                        <input class="form-input" id="newsletter" type="email" name="email" data-constraints="@Required @Email">
                       </div>
-                    </div>
+                      <div class="form-button">
+                        <button class="button button-primary-gradient button-icon-only" type="submit" aria-label="subscribe"><span class="icon icon-md mdi mdi-email-outline"></span></button>
+                      </div>
+                    </form>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="footer-classic-aside">
-              <div class="container">
-                <!-- Rights-->
-                <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Todos os Direitos Reservados.</span><span>&nbsp;</span><br class="d-sm-none"/><a href="termsofuse.html">Termos de Uso</a><span> e</span><span>&nbsp;</span><a href="polityprivacity.html">Política de Privacidade</a>. </p>
-              </div>
-            </div>
-          </footer>
+          </div>
         </div>
-        <div class="snackbars" id="form-output-global"></div>
-        <script src="js/core.min.js"></script>
-        <script src="js/script.js"></script>
-      </body>
-    </html>
+        <div class="footer-classic-aside">
+          <div class="container">
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Todos os Direitos Reservados.</span><span>&nbsp;</span><br class="d-sm-none"/><a href="termsofuse.html">Termos de Uso</a><span> e</span><span>&nbsp;</span><a href="polityprivacity.html">Política de Privacidade</a>. </p>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <div class="snackbars" id="form-output-global"></div>
+    <script src="js/core.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/firebaseConfig.js" type="module"></script>
+    <script src="js/newsletter.js" type="module"></script>
+  </body>
+</html>
