--- a/typography.html
+++ b/typography.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html class="wide wow-animation" lang="en">
-
+<html class="wide wow-animation" lang="pt-br">
 <head>
   <title>Metodologia</title>
   <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
@@ -13,12 +12,9 @@
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
   <div class="preloader">
-    <div class="preloader-logo"><a class="brand" href="index.html"><img class="brand-logo-dark"
-          src="images/pourpose.png" alt="" width="245" height="50" /><img class="brand-logo-light"
-          src="images/logo-inverse-245x50.png" alt="" width="245" height="50" /></a>
+    <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="images/pourpose.png" alt="" width="245" height="50" /></a>
     </div>
     <div class="preloader-body">
       <div class="cssload-container">
@@ -27,34 +23,26 @@
     </div>
   </div>
   <div class="page">
-    <!-- Page Header-->
     <header class="section page-header page-header-1">
-      <!-- RD Navbar-->
       <div class="rd-navbar-wrap">
-        <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
-          data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static"
-          data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static"
-          data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px"
-          data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
+        <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
           <div class="rd-navbar-main-outer">
             <div class="rd-navbar-main">
-              <!-- RD Navbar Panel-->
               <div class="rd-navbar-panel">
-                <!-- RD Navbar Toggle-->
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-                <!-- RD Navbar Brand-->
                 <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark"
                       src="images/png-judafy-logo.png" alt="" width="245" height="50" /></a>
                 </div>
               </div>
               <div class="rd-navbar-nav-wrap">
-                <!-- RD Navbar Nav		-->
                 <ul class="rd-navbar-nav">
                   <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                   </li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Sobre</a>
                   </li>
                   <li class="rd-nav-item active"><a class="rd-nav-link" href="typography.html">Metodologia</a>
+                  </li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="action.html">Ação</a>
                   </li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatos</a>
                   </li>
@@ -100,7 +88,7 @@
             </ul>
           </div>
           <div class="col-xl-4 wow fadeIn img-container" data-wow-delay=".4s">
-              <img class="img-rounded responsive-img" src="images/gotejamento.jpg" alt="">
+            <img class="img-rounded responsive-img" src="images/gotejamento.jpg" alt="">
           </div>
         </div>
       </div>
@@ -163,7 +151,8 @@
                     <div class="icon box-minimal-icon mdi mdi-water-pump"></div>
                     <h4 class="box-minimal-title">Extração de Água Subterrânea</h4>
                     <div class="box-minimal-text">
-                      <p>Simcha Blass estava convencido de que havia lençóis de água subterrânea no deserto e propôs a perfuração profunda no subsolo para extrair essa água.</p>
+                      <p>Simcha Blass estava convencido de que havia lençóis de água subterrânea no deserto e propôs a
+                        perfuração profunda no subsolo para extrair essa água.</p>
                     </div>
                   </article>
                 </div>
@@ -172,7 +161,8 @@
                     <div class="icon box-minimal-icon mdi mdi-weather-rainy"></div>
                     <h4 class="box-minimal-title">Bombeamento de Água do Rio Jordão</h4>
                     <div class="box-minimal-text">
-                      <p>A segunda fase consistiu em bombear água do rio Jordão para fornecer água potável e de irrigação a diversas partes do país através do aqueduto nacional.</p>
+                      <p>A segunda fase consistiu em bombear água do rio Jordão para fornecer água potável e de
+                        irrigação a diversas partes do país através do aqueduto nacional.</p>
                     </div>
                   </article>
                 </div>
@@ -181,7 +171,8 @@
                     <div class="icon box-minimal-icon mdi mdi-map"></div>
                     <h4 class="box-minimal-title">Aqueduto Nacional</h4>
                     <div class="box-minimal-text">
-                      <p>A última fase foi a construção do Aqueduto Nacional, com mais de 100 km de extensão, responsável por bombear água do norte até o mar da Galileia, o maior lago de água doce do país.</p>
+                      <p>A última fase foi a construção do Aqueduto Nacional, com mais de 100 km de extensão, 
+                         responsável por bombear água do norte até o mar da Galileia, o maior lago de água doce do país.</p>
                     </div>
                   </article>
                 </div>
@@ -496,38 +487,34 @@
                 </div>
                 <div class="col-12">
                   <h3>Notícias</h3>
-                  <p>Insira seu e-mail para receber as notícias e atualizações sobre o nosso projeto.</p>
-                  <form class="rd-form rd-mailform form-inline subscribe-form" data-form-output="form-output-global"
-                    data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
-                    <div class="form-wrap">
-                      <input class="form-input" id="subscribe-form-2-email" type="email" name="email"
-                        data-constraints="@Email @Required">
-                      <label class="form-label" for="subscribe-form-2-email">E-mail</label>
-                    </div>
-                    <div class="form-button">
-                      <button class="button button-primary-gradient button-icon-only" type="submit"
-                        aria-label="subscribe"><span class="icon icon-md mdi mdi-email-outline"></span></button>
-                    </div>
-                  </form>
+                    <p>Insira seu e-mail para receber as notícias e atualizações sobre o nosso projeto.</p>
+                    <form class="rd-form rd-mailform form-inline" data-form-output="form-output-global" id="newsletterForm">
+                      <div class="form-wrap">
+                        <label class="form-label" for="newsletter">E-mail</label>
+                        <input class="form-input" id="newsletter" type="email" name="email" data-constraints="@Required @Email">
+                      </div>
+                      <div class="form-button">
+                        <button class="button button-primary-gradient button-icon-only" type="submit" aria-label="subscribe"><span class="icon icon-md mdi mdi-email-outline"></span></button>
+                      </div>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="footer-classic-aside">
-        <div class="container">
-          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Todos
-              os
-              Direitos Reservados.</span><span>&nbsp;</span><br class="d-sm-none" /><a href="termsofuse.html">Termos de
-              Uso</a><span> e</span><span>&nbsp;</span><a href="polityprivacity.html">Política de Privacidade</a>. </p>
+        <div class="footer-classic-aside">
+          <div class="container">
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Todos os Direitos Reservados.</span><span>&nbsp;</span><br class="d-sm-none"/><a href="termsofuse.html">Termos de Uso</a><span> e</span><span>&nbsp;</span><a href="polityprivacity.html">Política de Privacidade</a>. </p>
+          </div>
         </div>
-      </div>
-    </footer>
-  </div>
-  <div class="snackbars" id="form-output-global"></div>
-  <script src="js/core.min.js"></script>
-  <script src="js/script.js"></script>
-</body>
-
+      </footer>
+    </div>
+    <div class="snackbars" id="form-output-global"></div>
+    <script src="js/core.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/hover.js"></script>
+    <script src="js/firebaseConfig.js" type="module"></script>
+    <script src="js/newsletter.js" type="module"></script>
+  </body>
 </html>
