--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="wide wow-animation" lang="en">
+<html class="wide wow-animation" lang="pt-br">
   <head>
     <title>Sobre</title>
     <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="preloader">
-      <div class="preloader-logo"><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/pourpose.png" alt="" width="245" height="50"/></a>
+      <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="images/pourpose.png" alt="" width="245" height="50"/></a>
       </div>
       <div class="preloader-body">
         <div class="cssload-container">
@@ -39,6 +39,8 @@
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="about.html">Sobre</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Metodologia</a>
+                    </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="action.html">Ação</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatos</a>
                     </li>
@@ -282,11 +284,10 @@
                   <div class="col-12">
                     <h3>Notícias</h3>
                     <p>Insira seu e-mail para receber as notícias e atualizações sobre o nosso projeto.</p>
-                    <!-- RD Mailform-->
-                    <form class="rd-form rd-mailform form-inline subscribe-form" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
+                    <form class="rd-form rd-mailform form-inline" data-form-output="form-output-global" id="newsletterForm">
                       <div class="form-wrap">
-                        <input class="form-input" id="subscribe-form-2-email" type="email" name="email" data-constraints="@Email @Required">
-                        <label class="form-label" for="subscribe-form-2-email">E-mail</label>
+                        <label class="form-label" for="newsletter">E-mail</label>
+                        <input class="form-input" id="newsletter" type="email" name="email" data-constraints="@Required @Email">
                       </div>
                       <div class="form-button">
                         <button class="button button-primary-gradient button-icon-only" type="submit" aria-label="subscribe"><span class="icon icon-md mdi mdi-email-outline"></span></button>
@@ -300,7 +301,6 @@
         </div>
         <div class="footer-classic-aside">
           <div class="container">
-            <!-- Rights-->
             <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Todos os Direitos Reservados.</span><span>&nbsp;</span><br class="d-sm-none"/><a href="termsofuse.html">Termos de Uso</a><span> e</span><span>&nbsp;</span><a href="polityprivacity.html">Política de Privacidade</a>. </p>
           </div>
         </div>
@@ -309,5 +309,7 @@
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/firebaseConfig.js" type="module"></script>
+    <script src="js/newsletter.js" type="module"></script>
   </body>
 </html>
