--- a/contacts.html
+++ b/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="wide wow-animation" lang="en">
+<html class="wide wow-animation" lang="pt-br">
   <head>
     <title>Contatos</title>
     <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="preloader">
-      <div class="preloader-logo"><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/pourpose.png" alt="" width="245" height="50"/><img class="brand-logo-light" src="images/logo-inverse-245x50.png" alt="" width="245" height="50"/></a>
+      <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="images/pourpose.png" alt="" width="245" height="50"/></a>
       </div>
       <div class="preloader-body">
         <div class="cssload-container">
@@ -34,14 +34,11 @@
                 </div>
                 <div class="rd-navbar-nav-wrap">
                   <ul class="rd-navbar-nav">
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Sobre</a>
-                    </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Metodologia</a>
-                    </li>
-                    <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contatos</a>
-                    </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a></li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Sobre</a></li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Metodologia</a></li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="action.html">Ação</a></li>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contatos</a></li>
                   </ul>
                 </div>
               </div>
@@ -87,7 +84,7 @@
           </div>
         </section>
       </div>
-        <div class="wrapper">
+        <div class="wrapperr">
           <div class="items">
             <div class="item" tabindex="0" style="background-image: url(images/foto1.jpg)"></div>
             <div class="item" tabindex="0" style="background-image: url(images/foto2.jpg)"></div>
@@ -128,17 +125,17 @@
             </div>
             <div class="col-lg-8">
               <h2>Entre em Contato</h2>
-              <form class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact" action="send.php" method="POST" >
+              <form class="rd-form rd-mailform" data-form-output="form-output-global" action="" id="contactForm">
                   <div class="row row-30">
                       <div class="col-md-6">
                           <div class="form-wrap">
-                              <input class="form-input" id="contact-first-name" type="text" name="first-name" data-constraints="@Required">
+                              <input class="form-input" id="contact-first-name" type="text" name="first-name" data-constraints="@Required @NameValidate">
                               <label class="form-label" for="contact-first-name">Primeiro Nome</label>
                           </div>
                       </div>
                       <div class="col-md-6">
                           <div class="form-wrap">
-                              <input class="form-input" id="contact-last-name" type="text" name="last-name" data-constraints="@Required">
+                              <input class="form-input" id="contact-last-name" type="text" name="last-name" data-constraints="@Required @NameValidate">
                               <label class="form-label" for="contact-last-name">Último Nome</label>
                           </div>
                       </div>
@@ -151,7 +148,7 @@
                       <div class="col-md-6">
                           <div class="form-wrap">
                               <label class="form-label" for="contact-phone">Telefone</label>
-                              <input class="form-input" id="contact-phone" type="text" name="phone" data-constraints="@Required @PhoneNumber">
+                              <input class="form-input" id="contact-phone" type="text" name="phone" data-constraints="@Required @CustomAlphaNumeric">
                           </div>
                       </div>
                       <div class="col-12">
@@ -161,7 +158,7 @@
                           </div>
                       </div>
                       <div class="col-12">
-                          <button class="button button-lg button-primary button-raven" type="submit">Enviar</button>
+                          <button class="button button-lg button-primary-gradient" type="submit"><span>Enviar</span></button>
                       </div>
                   </div>
               </form>
@@ -205,7 +202,6 @@
               </div>
               <div class="col-sm-6 col-lg-4 col-xl-5">
                 <h3>Atualizações do Twitter</h3>
-                <!-- RD Twitter Feed-->
                 <div>
                   <br>
                   <article class="tweet-light" data-twitter-type="tweet">
@@ -240,11 +236,10 @@
                   <div class="col-12">
                     <h3>Notícias</h3>
                     <p>Insira seu e-mail para receber as notícias e atualizações sobre o nosso projeto.</p>
-                    <!-- RD Mailform-->
-                    <form class="rd-form rd-mailform form-inline subscribe-form" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
+                    <form class="rd-form rd-mailform form-inline" data-form-output="form-output-global" id="newsletterForm">
                       <div class="form-wrap">
-                        <input class="form-input" id="subscribe-form-2-email" type="email" name="email" data-constraints="@Email @Required">
-                        <label class="form-label" for="subscribe-form-2-email">E-mail</label>
+                        <label class="form-label" for="newsletter">E-mail</label>
+                        <input class="form-input" id="newsletter" type="email" name="email" data-constraints="@Required @Email">
                       </div>
                       <div class="form-button">
                         <button class="button button-primary-gradient button-icon-only" type="submit" aria-label="subscribe"><span class="icon icon-md mdi mdi-email-outline"></span></button>
@@ -258,7 +253,6 @@
         </div>
         <div class="footer-classic-aside">
           <div class="container">
-            <!-- Rights-->
             <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Todos os Direitos Reservados.</span><span>&nbsp;</span><br class="d-sm-none"/><a href="termsofuse.html">Termos de Uso</a><span> e</span><span>&nbsp;</span><a href="polityprivacity.html">Política de Privacidade</a>. </p>
           </div>
         </div>
@@ -267,5 +261,8 @@
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/firebaseConfig.js" type="module"></script>
+    <script src="js/contactForm.js" type="module"></script>
+    <script src="js/newsletter.js" type="module"></script>
   </body>
 </html>
