--- a/admin/login.html
+++ b/admin/login.html
@@ -43,16 +43,15 @@
                         <i class='bx bxs-lock-alt' id="toggle-password"></i>
                     </div>
                     <button type="submit" class="btn">Login</button>
-                </form>
+                    <span id="error-message" class="error-message hidden">E-mail ou senha inválidos</span>
+                </form>                              
             </div>
         </div>
     </div>
     <div class="snackbars" id="form-output-global"></div>
     <script src="../js/core.min.js"></script>
     <script src="../js/script.js"></script>
-    <script src="../js/lock.js"></script>
     <script src="../js/firebaseConfig.js" type="module"></script>
     <script src="../js/maillogin.js" type="module"></script>
 </body>
-
 </html>
