--- a/polityprivacity.html
+++ b/polityprivacity.html
@@ -64,6 +64,7 @@
     <section class="section section-lg bg-default">
       <div class="container">
         <div class="row row-30 row-md-50 row-xl-70">
+          <div class="col-12"></div>
           <ul class="list-xl">
             <li>
               <h1>Política de Privacidade</h1>
@@ -102,6 +103,7 @@
           </ul>
         </div>
       </div>
+  </div>
   </div>
   </section>
   <footer class="section footer-classic bg-gray-950">
