--- a/typography.html
+++ b/typography.html
@@ -243,7 +243,7 @@
         </div>
         <div class="row row-50">
           <div class="col-xl-4 wow fadeIn img-container" data-wow-delay=".4s">
-            <img class="img-rounded responsive-img" src="images/Torre-Ashalin.jpg" alt="">
+            <img class="img-rounded responsive-img" src="images/torre-Ashalin.jpg" alt="">
           </div>
           <div class="col-xl-8">
             <p>Com isso, o país investiu significativamente em pesquisa e desenvolvimento de novos materiais fotovoltaicos, 
