--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <div class="rd-navbar-main">
                 <div class="rd-navbar-panel">
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-                  <div class="rd-navbar-brand"><a class="brand"><img class="brand-logo-dark" src="images/png-judafy-logo.png" alt="" width="245" height="50"/></a>
+                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/png-judafy-logo.png" alt="" width="245" height="50"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-nav-wrap">
