--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Inovação Agrícola</h6>
                         <h2 data-caption-animate="slideInLeft" data-caption-delay="300">A irrigação por gotejamento<br><span class="text-italic font-weight-bold">Gera eficiência no uso da água</span>
                         </h2>
-                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#indexSubscribe"><span>Inscreva-se para notificações</span></a></div>
+                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#newsletterForm"><span>Inscreva-se para notificações</span></a></div>
                       </div>
                     </div>
                   </div>
@@ -80,7 +80,7 @@
                         <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Área em destaque</h6>
                         <h2 data-caption-animate="slideInLeft" data-caption-delay="300">A agricultura de precisão<br><span class="text-italic font-weight-bold">Reduz impactos ambientais</span>
                         </h2>
-                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#indexSubscribe"><span>Inscreva-se para notificações</span></a></div>
+                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#newsletterForm"><span>Inscreva-se para notificações</span></a></div>
                       </div>
                     </div>
                   </div>
@@ -96,7 +96,7 @@
                         <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Ascenção genética</h6>
                         <h2 data-caption-animate="slideInLeft" data-caption-delay="300">A biotecnologia<br><span class="text-italic font-weight-bold">Estimula a produção sustentável</span>
                         </h2>
-                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#indexIndexSubscribe"><span>Inscreva-se para notificações</span></a></div>
+                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#newsletterForm"><span>Inscreva-se para notificações</span></a></div>
                       </div>
                     </div>
                   </div>
@@ -245,7 +245,7 @@
       </section>
       <section class="section section-lg bg-default text-center pt-0">
         <div class="container">
-          <h2 class="wow fadeIn">Opiniões</h2>
+          <h2 class="wow fadeIn">Comentários</h2>
           <div class="owl-carousel owl-carousel-opinioes offset-top-2 wow fadeIn" data-wow-delay=".2s" data-items="1" data-lg-items="2" data-xl-items="3" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="false" data-margin="30" data-mouse-drag="false">
             <blockquote class="quote-classic">
               <div class="quote-classic-avatar-outer"><img class="quote-classic-avatar" src="images/wagner.png" alt="" width="68" height="68"/>
@@ -280,7 +280,7 @@
                 </div>
               </div>
             </blockquote>
-          </div><a class="button button-lg button-primary-gradient wow fadeIn" href="contacts.html#index4"><span>enviar sua opinião</span></a>
+          </div><a class="button button-lg button-primary-gradient wow fadeIn" href="contacts.html#index4"><span>enviar seu comentário</span></a>
         </div>
       </section>
       <footer class="section footer-classic bg-gray-950">
@@ -402,7 +402,6 @@
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/firebaseConfig.js" type="module"></script>
     <script src="js/newsletter.js" type="module"></script>
   </body>
 </html>
