--- a/admin/forms.html
+++ b/admin/forms.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="pt-br">
+
 <head>
-    <title>Login</title>
+    <title>Formulários</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap">
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
+
 <body>
     <div class="preloader">
         <div class="preloader-logo">
@@ -28,27 +30,27 @@
         </div>
     </div>
     <div class="page">
-        <div class="login">
-            <div class="wraper">
-                <form id="login-form" action="javascript:void(0);">
-                    <h1>Login</h1>
-                    <div class="input-box">
-                        <input type="email" placeholder="E-mail" id="email" required>
-                        <i class='bx bxs-user'></i>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="wrapper">
+                        <h1>Formulários</h1>
+                        <div id="contactsWrapper"></div>
                     </div>
-                    <div class="input-box">
-                        <input type="password" placeholder="Senha" id="password" required>
-                        <i class='bx bxs-lock-alt' id="toggle-password"></i>
-                    </div>
-                    <button type="submit" class="btn">Login</button>
-                    <span id="error-message" class="error-message hidden">E-mail ou senha inválidos</span>
-                </form>
+                </div>
             </div>
         </div>
+        <form action="javascript:void(0);">
+            <button type="submit" class="log-out bx bx-log-out" id="uiLogOut" onclick="logOut()"></button>
+            <button type="submit" class="edit-remove bx bx-x" id="" onclick=""></button>
+            <button type="submit" class="edit-find bx bx-search" id="" onclick=""></button>
+            <button type="submit" class="edit-add bx bx-folder-plus" id="" onclick=""></button>
+            <button type="submit" class="edit-set bx bx-refresh" id="" onclick=""></button>
+        </form>
     </div>
-    <div class="snackbars" id="form-output-global"></div>
     <script src="../js/core.min.js"></script>
     <script src="../js/script.js"></script>
-    <script src="../js/maillogin.js" type="module"></script>
+    <script src="../js/dataBase.js" type="module"></script>
 </body>
+
 </html>
