--- a/admin/newsletter.html
+++ b/admin/newsletter.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="pt-br">
-
+    
 <head>
-    <title>Banco de Dados</title>
+    <title>Newsletter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap">
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -31,27 +31,26 @@
     </div>
     <div class="page">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="wrapper col-12 col-lg-5">
-                    <h1>Newsletter</h1>
-                    <h2>Usuários inscritos nas notícias da página.</h2>
-                    <div id="newsletterWrapper"></div>
-                </div>
-                <div class="wrapper col-12 col-lg-5">
-                    <h1>Formulários</h1>
-                    <h2>Usuários que enviaram formulários de contato.</h2>
-                    <div id="contactsWrapper"></div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="wrapper">
+                        <h1>Newsletter</h1>
+                        <div id="newsletterWrapper"></div>
+                    </div>
                 </div>
             </div>
         </div>
         <form action="javascript:void(0);">
-            <button type="submit" class="ui-log-out bx bx-log-out" id="uiLogOut" onclick="logOut()"></button>
+            <button type="submit" class="log-out bx bx-log-out" id="uiLogOut" onclick="logOut()"></button>
+            <button type="submit" class="edit-remove bx bx-x" id="" onclick=""></button>
+            <button type="submit" class="edit-find bx bx-search" id="" onclick=""></button>
+            <button type="submit" class="edit-add bx bx-folder-plus" id="" onclick=""></button>
+            <button type="submit" class="edit-set bx bx-refresh" id="" onclick=""></button>
         </form>
     </div>
     <script src="../js/core.min.js"></script>
     <script src="../js/script.js"></script>
-    <script src="../js/firebaseConfig.js" type="module"></script>
-    <script src="../js/logOut.js" type="module"></script>
     <script src="../js/dataBase.js" type="module"></script>
 </body>
+
 </html>
